--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,13 @@ header h1{
     cursor: pointer;
 }
 
-header h1:hover span{
+header h1 img{
+    width:40px;
+    height: auto;
+    padding-left: 5px;
+}
+
+header h1:hover img{
     transform: scale(1.2);
     text-shadow: 0px 0px 3px #b0f184;
 }
